--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@ POSTGRES_PASSWORD="g9SVquLTNP8b"
 POSTGRES_DATABASE="verceldb"
 POSTGRES_PORT=5432
 ACCESS_TOKEN_EXPIRATION_TIME=900000
+ACCESS_TOKEN_SECRET='ACCESS_TOKEN_SECRET'
 REFRESH_TOKEN_EXPIRATION_TIME=2592000000
+REFRESH_TOKEN_SECRET='REFRESH_TOKEN_SECRET'
