--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ ACCESS_TOKEN_SECRET='ACCESS_TOKEN_SECRET'
 REFRESH_TOKEN_EXPIRATION_TIME=2592000000
 REFRESH_TOKEN_SECRET='REFRESH_TOKEN_SECRET'
 COOKIE_SECRET='COOKIE_SECRET'
+VERCEL_BLOB_READ_WRITE_TOKEN="vercel_blob_rw_PKBA15RUZVuwyAcm_1rWMUtE9G76PvqajUfQhmQmaYkoNl4"
